--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -38,6 +38,38 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/swipe_view"
+            
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            
+            android:textSize="30dp"
+            
+            android:layout_marginBottom="15dp"
+            
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            
+            android:text="@string/swipe_view"
+            
+            android:background="@color/darkolivegreen4"
+            
+            android:textColor="@color/white"
+            
+            android:gravity="center_horizontal"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         
