--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -37,7 +37,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <helper.main.FlingView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         
