--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -38,38 +38,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        android:orientation="horizontal"
-        >
-
-        <TextView
-            android:id="@+id/swipe_view"
-            
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            
-            android:textSize="30dp"
-            
-            android:layout_marginBottom="15dp"
-            
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            
-            android:text="@string/swipe_view"
-            
-            android:background="@color/darkolivegreen4"
-            
-            android:textColor="@color/white"
-            
-            android:gravity="center_horizontal"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         
@@ -80,32 +48,30 @@
         
         >
 
-        <Button
-            android:id="@+id/button_progress_backward"
+        <ImageButton
+            android:id="@+id/ib_progress_decrease"
             
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             
-            android:text="@string/button_progress_backward"
-            
-            android:textSize="25dp"
+            android:src="@drawable/decrease_70x70"
             
             android:layout_weight="1"
             
+            android:background="@color/black"
             />
 
-        <Button
-            android:id="@+id/button_progress_forward"
+        <ImageButton
+            android:id="@+id/ib_progress_increase"
             
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             
-            android:text="@string/button_progress_forward"
-            
-            android:textSize="25dp"
+            android:src="@drawable/increase_70x70"
             
             android:layout_weight="1"
             
+            android:background="@color/black"
             />
 
     </LinearLayout>
@@ -113,23 +79,38 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content" 
+        
+        android:layout_marginTop="50dp"
+        
+        >
 
         <Button
             android:id="@+id/buttonStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            
             android:layout_weight="1"
+            
             android:enabled="false"
-            android:text="@string/label_start" />
+            android:text="@string/label_start" 
+            
+            android:layout_marginRight="5dp"
+            
+            />
 
         <Button
             android:id="@+id/buttonStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            
             android:layout_weight="1"
             android:enabled="false"
-            android:text="@string/label_stop" />
+            android:text="@string/label_stop" 
+            
+            android:layout_marginLeft="5dp"
+            
+            />
 
     </LinearLayout>
 
